# jal

./: .gitignore  CMakeLists.txt  THANKS  avr.cmake  main.cpp  settings.cmake  simpleTests.kdev4
cmake/: 1280.cmake  328p.cmake  avr.cmake
doc/: Doxyfile
src/: .main.c.kate-swp  defines.h  main.c  main.h  printf.c  printf.h  spi.c  spi.h  spi_eeprom.c  spi_eeprom.h
src/data/: font.c  font.h
src/devices/accel_gyro/: mpu6050.c  mpu6050.h
src/devices/eeprom/: 93C66.c  93C66.h  spi_eeprom.c  spi_eeprom.h
src/devices/oled/: co-16_module_v1.0.c  co-16_module_v1.0.h  ssd1306.c  ssd1306.h
src/interface/: spi.c  spi.h
src/io/: i2c.c  spi.c  spi.h  twi.c  twi.h  uart.c  uart.h
